--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.4.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>dev.lydtech.audit</groupId>
-	<artifactId>ambar-audit-service</artifactId>
+	<groupId>dev.lydtech.enquiry</groupId>
+	<artifactId>ambar-enquiry-service</artifactId>
 	<version>1.0.0</version>
-	<name>ambar-audit-service</name>
-	<description>Audit service demonstrating event sourcing with Ambar</description>
+	<name>ambar-enquiry-service</name>
+	<description>Enquiry service demonstrating event sourcing with Ambar</description>
 	<url/>
 	<properties>
 		<java.version>21</java.version>
